<resources>
    <string name="app_name">Poker Pal</string>
    <string name="practice_btn">Practice</string>
    <string name="calculators_btn">Calculators</string>
    <string name="learn_btn">Learn</string>
    <string name="expected_value_btn">Expected Value (EV)</string>
    <string name="current_pot">Current Pot:</string>
    <string name="bet_to_call">Bet To Call:</string>
    <string name="percentage_of_winning">Equity:</string>
    <string name="calculate">Calculate</string>
    <string name="expected_value_text">Expected Value</string>
    <string name="expected_value_answer">The expected value is</string>
    <string name="hero_hand">Hero</string>
    <string name="hand_equity">Hand Equity</string>
    <string name="total_score_text">Total Score:</string>
    <string name="outs_btn">Counting Outs</string>
</resources>
